# ensimag-shell

./: .gitignore  CMakeLists.txt  shell.nix
include/: memory_utils.h  parser.h  readcmd.h  tokenizer.h
src/: ensishell.c  memory_utils.c  parser.c  readcmd.c  tokenizer.c  variante.h.in
tests/: allShellTests.rb  testForkExec.rb  testInOut.rb  testJobs.rb
